<resources>
    <string name="app_name">WorkoutApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_main_text">Enter</string>
    <string name="interval_duration_hint">Interval duration</string>
    <string name="fragment_duration_picker_title">Duration picker</string>
    <string name="button_start_text">START</string>
    <string name="fragment_countdown_title">Coundown to start</string>
    <string name="text_view_countdown">COUNTDOWN TO START</string>
    <string name="text_view_time_placeholder">02:323</string>
    <string name="fragment_exercise_title">Exercise</string>
    <string name="button_pause_text">PAUSE</string>
    <string name="button_stop_text">STOP</string>
    <string name="button_resume_text">RESUME</string>
    <string name="button_restart_text">RESTART</string>
    <string name="text_view_time">%.2f:%.2f</string>

</resources>