<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="exerciseViewModel"
            type="com.example.workoutapp.viewmodel.ExerciseViewModel" />
        <variable
            name="exerciseTimerViewModel"
            type="com.example.workoutapp.viewmodel.ExerciseTimerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ExerciseFragment">

        <ImageView
            android:id="@+id/ivExercise"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:importantForAccessibility="no"
            android:padding="@dimen/startEndPaddingEditText"
            android:scaleType="fitXY"
            app:imageInt="@{exerciseViewModel.currentPhoto}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@{exerciseTimerViewModel.totalElapsedTimeString.toString()}"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivExercise" />

        <TextView
            android:id="@+id/tvTimeLeft"
            style="@style/TextAppearance.AppCompat.Body2"
            android:textSize="70sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@{exerciseTimerViewModel.timeLeft.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTime" />

        <Button
            android:id="@+id/btnPause"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_pause_text"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnStop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTime" />

        <Button
            android:id="@+id/btnResume"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_resume_text"
            android:textSize="26sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnStop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTime" />

        <Button
            android:id="@+id/btnStop"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_stop_text"
            android:backgroundTint="#FF9696"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnPause"
            app:layout_constraintTop_toBottomOf="@id/tvTime" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>